--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test --verbose"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.10.0",
