--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ node_js:
 before_install:
   - npm install -g --upgrade npm
   - npm install -g grunt-cli
+install:
+  - git config --global user.email "travis@travis-ci.org"
+  - git config --global user.name "Travis CI"
