--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "test": "grunt test --verbose"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt": "~0.4.1",
-    "grunt-release": "~0.12.0",
     "buster": "~0.7.6",
-    "grunt-buster": "~0.3.1"
+    "grunt": "~0.4.1",
+    "grunt-buster": "~0.3.1",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-release": "~0.12.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
