--- a/package.json
+++ b/package.json
@@ -2,50 +2,45 @@
   "name": "grunt-checkpending",
   "description": "Check that we have no pending changes before proceeding.",
   "version": "0.1.10",
-  "homepage": "https://github.com/dymonaz/grunt-checkpending",
+  "homepage": "https://github.com/dominykas/grunt-checkpending",
   "author": {
     "name": "Dominykas Blyžė",
     "email": "hello@dominykas.com",
-    "url": "http://www.dominykas.com/"
+    "url": "https://www.dominykas.com/"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/dymonaz/grunt-checkpending.git"
+    "url": "git://github.com/dominykas/grunt-checkpending.git"
   },
   "bugs": {
-    "url": "https://github.com/dymonaz/grunt-checkpending/issues"
+    "url": "https://github.com/dominykas/grunt-checkpending/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/dymonaz/grunt-checkpending/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "main": "Gruntfile.js",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.10.0"
   },
   "scripts": {
     "test": "grunt --verbose"
   },
   "devDependencies": {
-    "buster": "~0.7.6",
-    "grunt": "~0.4.1",
-    "grunt-bump": "^0.3.0",
-    "grunt-buster": "~0.3.1",
-    "grunt-checkbranch": "^0.3.3",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-jshint": "~0.11.0"
+    "buster": "0.7.x",
+    "grunt": "0.4.x",
+    "grunt-bump": "0.3.x",
+    "grunt-buster": "0.3.x",
+    "grunt-checkbranch": "0.3.x",
+    "grunt-cli": "0.1.x",
+    "grunt-contrib-clean": "0.6.x",
+    "grunt-contrib-jshint": "0.11.x"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": "0.4.x"
   },
   "keywords": [
     "gruntplugin",
     "git"
   ],
   "dependencies": {
-    "shelljs": "~0.4.0"
+    "shelljs": "0.4.x"
   }
 }
