--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 sudo: false
 node_js:
-  - "0.10"
-  - "0.12"
-  - "io.js"
+  - "4"
+  - "6"
 before_install:
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "Travis CI"
+  - npm i -g npm
 deploy:
   - provider: npm
     skip_cleanup: true
@@ -15,4 +15,4 @@ deploy:
       secure: "GJBkIZ2tJl0qiE+2TGBn3yfbSSTlAU5aQ2VCWIFcO86f+7aiRExLWgj7iXaVGbGBULjN9WNg2ZApuDqjq5WhosZ0+3LIs/o73E7U17F07Dew8/IFjMnIXgdPdmUOb1WbWu44tzWCapxcVUFOOKwN8q5K85R9CJu0/BbRJ3SPVpE="
     on:
       tags: true
-      node_js: "io.js"
+      node_js: "6"
